@@ -11,6 +11,7 @@ Fixed bug 1977230 - false positive: UselessOverridingMethod
 Fixed bug 1998185 - BeanMembersShouldSerialize vs @SuppressWarnings("serial")
 Fixed bug 2002722 - false + in UseStringBufferForStringAppends
 Fixed bug 2056318 - False positive for AvoidInstantiatingObjectsInLoops
+Fixed bug 1977438 - False positive for UselessStringValueOf
 Optimizations and false positive fixes in PreserveStackTrace
 @SuppressWarnings("all") disables all warnings
 All comment types are now stored in ASTCompilationUnit, not just formal ones
